// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line plot constants should plot horizontal line 1`] = `
<div
  style="width: 300px; height: 300px;"
>
  <svg
    class="baseSVG"
    height="100%"
    preserveAspectRatio="xMinYMin meet"
    viewBox="0 0 1000 700"
    width="100%"
  >
    <g
      class="canvas"
    >
      <rect
        class="graphArea"
        fill="#fff"
        fill-opacity="1"
        height="700"
        rx="0"
        ry="0"
        stroke="#00c"
        stroke-opacity="1"
        stroke-width="1"
        width="1000"
      />
    </g>
    <g
      class="grids"
    >
      <g
        class="hor-major-Grid"
        fill-opacity="0"
        stroke="#444"
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="980"
          y1="493"
          y2="493"
        />
        <line
          x1="20"
          x2="980"
          y1="247"
          y2="247"
        />
      </g>
      <g
        class="hor-minor-Grid"
        fill-opacity="0"
        stroke="#eee"
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="980"
          y1="690"
          y2="690"
        />
        <line
          x1="20"
          x2="980"
          y1="641"
          y2="641"
        />
        <line
          x1="20"
          x2="980"
          y1="592"
          y2="592"
        />
        <line
          x1="20"
          x2="980"
          y1="542"
          y2="542"
        />
        <line
          x1="20"
          x2="980"
          y1="493"
          y2="493"
        />
        <line
          x1="20"
          x2="980"
          y1="444"
          y2="444"
        />
        <line
          x1="20"
          x2="980"
          y1="395"
          y2="395"
        />
        <line
          x1="20"
          x2="980"
          y1="345"
          y2="345"
        />
        <line
          x1="20"
          x2="980"
          y1="296"
          y2="296"
        />
        <line
          x1="20"
          x2="980"
          y1="247"
          y2="247"
        />
        <line
          x1="20"
          x2="980"
          y1="198"
          y2="198"
        />
        <line
          x1="20"
          x2="980"
          y1="148"
          y2="148"
        />
        <line
          x1="20"
          x2="980"
          y1="99"
          y2="99"
        />
        <line
          x1="20"
          x2="980"
          y1="50"
          y2="50"
        />
      </g>
      <g
        class="ver-major-Grid"
        fill-opacity="0"
        stroke="#444"
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="133"
          x2="133"
          y1="690"
          y2="50"
        />
        <line
          x1="698"
          x2="698"
          y1="690"
          y2="50"
        />
      </g>
      <g
        class="ver-minor-Grid"
        fill-opacity="0"
        stroke="#eee"
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="20"
          y1="690"
          y2="50"
        />
        <line
          x1="133"
          x2="133"
          y1="690"
          y2="50"
        />
        <line
          x1="246"
          x2="246"
          y1="690"
          y2="50"
        />
        <line
          x1="359"
          x2="359"
          y1="690"
          y2="50"
        />
        <line
          x1="472"
          x2="472"
          y1="690"
          y2="50"
        />
        <line
          x1="585"
          x2="585"
          y1="690"
          y2="50"
        />
        <line
          x1="698"
          x2="698"
          y1="690"
          y2="50"
        />
        <line
          x1="811"
          x2="811"
          y1="690"
          y2="50"
        />
        <line
          x1="924"
          x2="924"
          y1="690"
          y2="50"
        />
      </g>
    </g>
    <g
      class="axes"
      color="#666"
    >
      <g
        class="horAxis"
        color="currentColor"
        fill="none"
        fill-opacity="0"
        font-family="sans-serif"
        font-size="16px"
        font-style="normal"
        font-weight="100"
        stroke="currentColor"
        stroke-opacity="1"
        stroke-width="1"
        text-anchor="middle"
        transform="translate(0, 690)"
      >
        <path
          class="domain"
          d="M20.5,5V0.5H980.5V5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(20.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            -1
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(133.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(246.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            1
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(359.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(472.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            3
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(585.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(698.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(811.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(924.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            7
          </text>
        </g>
      </g>
      <g
        class="verAxis"
        color="currentColor"
        fill="none"
        fill-opacity="0"
        font-family="sans-serif"
        font-size="16px"
        font-style="normal"
        font-weight="100"
        stroke="currentColor"
        stroke-opacity="1"
        stroke-width="1"
        text-anchor="end"
        transform="translate(133, 0)"
      >
        <path
          class="domain"
          d="M-5,690.5H0.5V50.5H-5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,690.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,641.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,592.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,542.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            8
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,493.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,444.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            12
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,395.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            14
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,345.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            16
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,296.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            18
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,247.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            20
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,198.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            22
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,148.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            24
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,99.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            26
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,50.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            28
          </text>
        </g>
      </g>
    </g>
    <g
      class="series"
    >
      <g
        class="series0"
        style="color: rgb(27, 158, 119);"
      >
        <g
          class="area"
          fill="currentColor"
          fill-opacity="0.5"
        >
          <path />
        </g>
        <g
          class="line"
          fill-opacity="0"
          stroke="currentColor"
          stroke-opacity="1"
          stroke-width="5"
        >
          <path
            d="M20,370C20,370,89.36998068079723,718.5812083391316,156,690C232.93773807308588,656.997255239056,332.0291096501163,91.39284075064101,472,50C608.4273593677888,9.655068663024668,980,419,980,419"
          />
        </g>
        <g
          class="markers"
          fill="currentColor"
          fill-opacity="0.75"
          stroke="currentColor"
          stroke-opacity="1"
          stroke-width="4"
        >
          <circle
            cx="20"
            cy="370"
            r="10"
          />
          <circle
            cx="156"
            cy="690"
            r="15"
          />
          <circle
            cx="472"
            cy="50"
            r="20"
          />
          <circle
            cx="980"
            cy="419"
            r="5"
          />
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="baseSVG"
    height="100%"
    preserveAspectRatio="xMinYMin meet"
    viewBox="0 0 1000 700"
    width="100%"
  >
    <g
      class="canvas"
    >
      <rect
        class="graphArea"
        fill="#fff"
        fill-opacity="1"
        height="700"
        rx="0"
        ry="0"
        stroke="#00c"
        stroke-opacity="1"
        stroke-width="1"
        width="1000"
      />
    </g>
    <g
      class="grids"
    >
      <g
        class="hor-major-Grid"
        fill-opacity="0"
        stroke="#444"
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="980"
          y1="370"
          y2="370"
        />
      </g>
      <g
        class="hor-minor-Grid"
        fill-opacity="0"
        stroke="#eee"
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="980"
          y1="370"
          y2="370"
        />
      </g>
      <g
        class="ver-major-Grid"
        fill-opacity="0"
        stroke="#444"
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="133"
          x2="133"
          y1="690"
          y2="50"
        />
        <line
          x1="698"
          x2="698"
          y1="690"
          y2="50"
        />
      </g>
      <g
        class="ver-minor-Grid"
        fill-opacity="0"
        stroke="#eee"
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="20"
          y1="690"
          y2="50"
        />
        <line
          x1="133"
          x2="133"
          y1="690"
          y2="50"
        />
        <line
          x1="246"
          x2="246"
          y1="690"
          y2="50"
        />
        <line
          x1="359"
          x2="359"
          y1="690"
          y2="50"
        />
        <line
          x1="472"
          x2="472"
          y1="690"
          y2="50"
        />
        <line
          x1="585"
          x2="585"
          y1="690"
          y2="50"
        />
        <line
          x1="698"
          x2="698"
          y1="690"
          y2="50"
        />
        <line
          x1="811"
          x2="811"
          y1="690"
          y2="50"
        />
        <line
          x1="924"
          x2="924"
          y1="690"
          y2="50"
        />
      </g>
    </g>
    <g
      class="axes"
      color="#000"
    >
      <g
        class="horAxis"
        color="currentColor"
        fill="none"
        fill-opacity="0"
        font-family="sans-serif"
        font-size="16px"
        font-style="normal"
        font-weight="100"
        stroke="currentColor"
        stroke-opacity="1"
        stroke-width="1"
        text-anchor="middle"
        transform="translate(0, 370)"
      >
        <path
          class="domain"
          d="M20.5,5V0.5H980.5V5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(20.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            -1
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(133.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(246.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            1
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(359.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(472.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            3
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(585.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(698.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(811.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(924.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            7
          </text>
        </g>
      </g>
      <g
        class="verAxis"
        color="currentColor"
        fill="none"
        fill-opacity="0"
        font-family="sans-serif"
        font-size="16px"
        font-style="normal"
        font-weight="100"
        stroke="currentColor"
        stroke-opacity="1"
        stroke-width="1"
        text-anchor="end"
        transform="translate(133, 0)"
      >
        <path
          class="domain"
          d="M-5,690.5H0.5V50.5H-5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,370.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            10
          </text>
        </g>
      </g>
    </g>
    <g
      class="series"
    >
      <g
        class="series0"
        style="color: rgb(27, 158, 119);"
      >
        <g
          class="area"
          fill="currentColor"
          fill-opacity="0.5"
        >
          <path />
        </g>
        <g
          class="line"
          fill-opacity="0"
          stroke="currentColor"
          stroke-opacity="1"
          stroke-width="5"
        >
          <path
            d="M20,370C20,370,90.67477497655099,370,156,370C233.3233300358553,369.99999999999994,343.4899600873148,370,472,370C613.3098334101694,369.99999999999994,980,370,980,370"
          />
        </g>
        <g
          class="markers"
          fill="currentColor"
          fill-opacity="0.75"
          stroke="currentColor"
          stroke-opacity="1"
          stroke-width="4"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Line plot data should plot line 1`] = `
<div
  style="width: 300px; height: 300px;"
>
  <svg
    class="baseSVG"
    height="100%"
    preserveAspectRatio="xMinYMin meet"
    viewBox="0 0 1000 700"
    width="100%"
  >
    <g
      class="canvas"
    >
      <rect
        class="graphArea"
        fill="#fff"
        fill-opacity="1"
        height="700"
        rx="0"
        ry="0"
        stroke="#00c"
        stroke-opacity="1"
        stroke-width="1"
        width="1000"
      />
    </g>
    <g
      class="grids"
    >
      <g
        class="hor-major-Grid"
        fill-opacity="0"
        stroke="#444"
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="980"
          y1="493"
          y2="493"
        />
        <line
          x1="20"
          x2="980"
          y1="247"
          y2="247"
        />
      </g>
      <g
        class="hor-minor-Grid"
        fill-opacity="0"
        stroke="#eee"
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="980"
          y1="690"
          y2="690"
        />
        <line
          x1="20"
          x2="980"
          y1="641"
          y2="641"
        />
        <line
          x1="20"
          x2="980"
          y1="592"
          y2="592"
        />
        <line
          x1="20"
          x2="980"
          y1="542"
          y2="542"
        />
        <line
          x1="20"
          x2="980"
          y1="493"
          y2="493"
        />
        <line
          x1="20"
          x2="980"
          y1="444"
          y2="444"
        />
        <line
          x1="20"
          x2="980"
          y1="395"
          y2="395"
        />
        <line
          x1="20"
          x2="980"
          y1="345"
          y2="345"
        />
        <line
          x1="20"
          x2="980"
          y1="296"
          y2="296"
        />
        <line
          x1="20"
          x2="980"
          y1="247"
          y2="247"
        />
        <line
          x1="20"
          x2="980"
          y1="198"
          y2="198"
        />
        <line
          x1="20"
          x2="980"
          y1="148"
          y2="148"
        />
        <line
          x1="20"
          x2="980"
          y1="99"
          y2="99"
        />
        <line
          x1="20"
          x2="980"
          y1="50"
          y2="50"
        />
      </g>
      <g
        class="ver-major-Grid"
        fill-opacity="0"
        stroke="#444"
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="133"
          x2="133"
          y1="690"
          y2="50"
        />
        <line
          x1="698"
          x2="698"
          y1="690"
          y2="50"
        />
      </g>
      <g
        class="ver-minor-Grid"
        fill-opacity="0"
        stroke="#eee"
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="20"
          y1="690"
          y2="50"
        />
        <line
          x1="133"
          x2="133"
          y1="690"
          y2="50"
        />
        <line
          x1="246"
          x2="246"
          y1="690"
          y2="50"
        />
        <line
          x1="359"
          x2="359"
          y1="690"
          y2="50"
        />
        <line
          x1="472"
          x2="472"
          y1="690"
          y2="50"
        />
        <line
          x1="585"
          x2="585"
          y1="690"
          y2="50"
        />
        <line
          x1="698"
          x2="698"
          y1="690"
          y2="50"
        />
        <line
          x1="811"
          x2="811"
          y1="690"
          y2="50"
        />
        <line
          x1="924"
          x2="924"
          y1="690"
          y2="50"
        />
      </g>
    </g>
    <g
      class="axes"
      color="#666"
    >
      <g
        class="horAxis"
        color="currentColor"
        fill="none"
        fill-opacity="0"
        font-family="sans-serif"
        font-size="16px"
        font-style="normal"
        font-weight="100"
        stroke="currentColor"
        stroke-opacity="1"
        stroke-width="1"
        text-anchor="middle"
        transform="translate(0, 690)"
      >
        <path
          class="domain"
          d="M20.5,5V0.5H980.5V5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(20.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            -1
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(133.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(246.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            1
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(359.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(472.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            3
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(585.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(698.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(811.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(924.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            7
          </text>
        </g>
      </g>
      <g
        class="verAxis"
        color="currentColor"
        fill="none"
        fill-opacity="0"
        font-family="sans-serif"
        font-size="16px"
        font-style="normal"
        font-weight="100"
        stroke="currentColor"
        stroke-opacity="1"
        stroke-width="1"
        text-anchor="end"
        transform="translate(133, 0)"
      >
        <path
          class="domain"
          d="M-5,690.5H0.5V50.5H-5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,690.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,641.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,592.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,542.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            8
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,493.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,444.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            12
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,395.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            14
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,345.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            16
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,296.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            18
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,247.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            20
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,198.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            22
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,148.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            24
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,99.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            26
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,50.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            28
          </text>
        </g>
      </g>
    </g>
    <g
      class="series"
    >
      <g
        class="series0"
        style="color: rgb(27, 158, 119);"
      >
        <g
          class="area"
          fill="currentColor"
          fill-opacity="0.5"
        >
          <path />
        </g>
        <g
          class="line"
          fill-opacity="0"
          stroke="currentColor"
          stroke-opacity="1"
          stroke-width="5"
        >
          <path
            d="M20,370C20,370,89.36998068079723,718.5812083391316,156,690C232.93773807308588,656.997255239056,332.0291096501163,91.39284075064101,472,50C608.4273593677888,9.655068663024668,980,419,980,419"
          />
        </g>
        <g
          class="markers"
          fill="currentColor"
          fill-opacity="0.75"
          stroke="currentColor"
          stroke-opacity="1"
          stroke-width="4"
        >
          <circle
            cx="20"
            cy="370"
            r="10"
          />
          <circle
            cx="156"
            cy="690"
            r="15"
          />
          <circle
            cx="472"
            cy="50"
            r="20"
          />
          <circle
            cx="980"
            cy="419"
            r="5"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;
